# 5052_xAI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SEHS5052_Group Project_Group10.ipynb  pyproject.toml  requirements.txt  topic_e_xai_soc.ipynb
.github/workflows/: ci.yml
artifacts/: run_summary.json
artifacts/tables/: eda_label_distribution.csv  model_metrics.csv  overfitting_diagnostics.csv  shap_global_importance.csv  shap_lime_case_comparison.csv  soc_alert_report.csv
report/: README.md  SEHS5052_Topic_E_Report.md
scripts/: build_topic_e_notebook.py
src/: __init__.py  data_pipeline.py  explainability.py  logging_utils.py  run_experiment.py  soc_simulation.py  train_models.py
tests/: test_data_pipeline.py  test_soc_simulation.py  test_train_models.py
